Corrects text alignment in ellipsis
Removes text indentation on ellipsis to correct their text alignment.

This ensures the text within the ellipsis is properly centered.

--- a/assets/style.css
+++ b/assets/style.css
@@ -52,6 +52,7 @@ ul li a {
     text-align: center;
     margin-top: 1em;
     margin-bottom: 1em;
+    text-indent: 0;
 }
 
 .dedication {
